# Submission_CG_basic_Ex4

./: README.md  index.html
Advanced04/: Advanced04  CMakeLists.txt
Advanced04/shaders/: noise3D.glsl  particle.glsl  particle_shadows.glsl  planar_shadows.glsl  projection.glsl  simple_color.glsl
Advanced04/src/: cg.cpp  cg.h  main.cpp
Basic/: Basic1.js  Basic2.js  Basic3.js
